<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">@string/app_name</string>
    <string name="app_name">Wisecraft</string>
	<string name="ip">IP or host:</string>
	<string name="port">Port:</string>
	<string name="start">Start</string>
	<string name="ex.ip">e.g.) localhost</string>
	<string name="ex.port">e.g.) 19132</string>
	<string name="players">Players</string>
	<string name="data">Data</string>
	<string name="plugins">Plugins</string>
	<string name="status">Status</string>
	<string name="notResponding">No Response</string>
	<string name="working">Pinging...</string>
	<string name="update">Update</string>
	<string name="update.all">Update All</string>
	<string name="add">Add Server</string>
	<string name="addFromMCPE">Add All from MCPE Server List</string>
	<string name="auSure">Are you sure?</string>
	<string name="numError">An error occured while parsing the number. Cancelled.</string>
	<string name="alreadyExists">Server already added.</string>
	<string name="importing">Importing...</string>
	<string name="testServer">Test this server</string>
	<string name="testTimes">How many times do you want to ping? :</string>
	<string name="isPC">This server is PC version.</string>
	<string name="serverInfoPCMessage">PC version of Minecraft does not send all the informations to show here.\nThis is a speficication of Minecraft server.</string>
	<string name="export">Export the list to a file</string>
	<string name="imporT">Import from a file</string>
	<string name="import_typepath">Type the path to the json file to import</string>
	<string name="export_complete">Exporting Complete: [PATH]</string>
	<string name="export_failed">Exporting failed</string>
	<string name="serverOffline">Server is Offline.</string>
	<string name="selectFont">Select Font</string>
	<string name="ucpInfoError">No details for this server.</string>
	<string name="addToMcpe">Add this server into MCPE Server List</string>
	<string name="launchProxy">Start proxy</string>
	<string name="bringOnlinesToTop">Bring online servers to the first</string>
	<string name="trickSheet">TrickSheet</string>
	<string name="settings">Settings</string>
	<string name="pingThreads">Threads for parallel pinging</string>
	<string name="updAnotherThread">Update server statuses in another thread</string>
	<string name="settingsAttention">Almost settings are applied after you restarted the app.</string>
	<string name="features">Features</string>
	<string name="proxy">Proxy</string>
	<string name="serverFinder">Server Finder</string>
	<string name="sendInfos">Send informations to improve this app</string>
	<string name="ipWithoutPort">Type the IP address without port</string>
	<string name="donotChange_serverFinder">Do not change them if you can\'t understand what are they mean.</string>
	<string name="startPort">Start Port</string>
	<string name="endPort">End Port</string>
	<string name="finding">Finding...</string><!--Reserved for future release-->
	<string name="findingServers">Finding Servers...</string>
	<string name="selectWebSite">Select a website:</string>
	<string name="findServers">Find servers in this page</string>
	<string name="addServerFromServerListSite">Add servers from server list site</string>
	<string name="error">Error</string>
	<string name="selectServers">Select Servers</string>
	<string name="exit">Exit</string>
	<string name="serverListStyle">Style of the Server List screen</string>
	<string name="saved_fonts">Saved your change. Please tap \"Exit\" button in the top screen to restart this app.</string>
	<string name="allowAutoUpdateSLSCode">Allow updating the library for getting servers. (Subset of McServerList)</string>
	<string name="aausc_monnet">Allow updating when the mobile network is active</string>
	<string name="currentSlsVersion">Current library version</string>
	<string name="latestSlsVersion">Latest library version</string>
	<string name="unknown">Unknown</string>
	<string name="addThisServer">Add this server</string>
	<string name="export_typepath">Type the path to the json file to export</string>
	<string name="exporting">Exporting...</string>
	<string name="imported">Importing Complete: [PATH]</string>
	
	
	<string name="font">lato-light.ttf</string>
	<string name="fontField">latoLight</string>
	
	<string-array name="serverSubMenu">
		<item>Remove</item>
		<item>@string/update</item>
		<item>Edit</item>
		<item>@string/testServer</item>
		<item>@string/rcon</item>
		<item>@string/addToMcpe</item>
		<item>@string/launchProxy</item>
		<item>@string/serverFinder</item>
	</string-array>
	<string-array name="serverFinderMenu">
		<item>@string/addThisServer</item>
	</string-array>
	
	
	<string-array name="serverListSites">
		<item>minecraftservers.org</item>
		<item>minecraftpeservers.org</item>
		<item>www.minecraft-servers-list.org</item>
		<item>minecraft-mp.com</item>
		<item>minecraftpocket-servers.com</item>
		<item>minecraft.jp</item>
		<item>pe.minecraft.jp</item>
		<item>pmmp.jp.net</item>
	</string-array>
	
	<string-array name="serverListStyles">
		<item>Default</item>
		<item>Use Navigation drawer with Buttons instead of Menu</item>
		<item>Use Navigation drawer with a List instead of Menu</item>
	</string-array>
</resources>
