<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<com.nao20010128nao.Wisecraft.misc.pref.StartPref
		android:title="@string/settingsAttention"
		android:key=""
		android:enabled="false"
	/>
	<PreferenceScreen
		android:title="@string/basics">
		<EditTextPreference 
			android:key="parallels" 
			android:title="@string/pingThreads"
			android:inputType="number" 
			android:maxLength="3"
			android:defaultValue="6"
		/>
		<CheckBoxPreference
			android:title="@string/updAnotherThread"
			android:key="updAnotherThread"
		/>
		<CheckBoxPreference
			android:title="@string/sortPlayerNames"
			android:key="sortPlayerNames"
			android:defaultValue="true"
		/>
		<CheckBoxPreference
			android:title="@string/sortPluginNames"
			android:key="sortPluginNames"
		/>
		<CheckBoxPreference
			android:title="@string/showPcUserFace"
			android:key="showPcUserFace"
			android:defaultValue="false"
		/>
		<com.nao20010128nao.Wisecraft.misc.pref.StartPref
			android:title="@string/serverListStyle"
			android:key="serverListStyle"
		/>
		<com.nao20010128nao.Wisecraft.misc.pref.StartPref
			android:title="@string/selectFont"
			android:key="selectFont"
		/>
		<CheckBoxPreference
			android:title="@string/sendInfos"
			android:key="sendInfos"
			android:defaultValue="false"
		/>
	</PreferenceScreen>
	<PreferenceScreen
		android:title="@string/features">
		<CheckBoxPreference
			android:title="@string/proxy"
			android:key="feature_proxy"
			android:defaultValue="true"
		/>
		<CheckBoxPreference
			android:title="@string/bringOnlinesToTop"
			android:key="feature_bott"
			android:defaultValue="true"
		/>
		<CheckBoxPreference
			android:title="@string/serverFinder"
			android:key="feature_serverFinder"
			android:defaultValue="false"
		/>
		<CheckBoxPreference
			android:title="@string/addServerFromServerListSite"
			android:key="feature_asfsls"
			android:defaultValue="false"
		/>
	</PreferenceScreen>
	<PreferenceScreen
		android:title="@string/addServerFromServerListSite"
		android:dependency="feature_asfsls">
		<CheckBoxPreference
			android:title="@string/allowAutoUpdateSLSCode"
			android:key="allowAutoUpdateSLSCode"
			android:defaultValue="false"
		/>
		<CheckBoxPreference
			android:title="@string/aausc_monnet"
			android:key="aausc_monnet"
			android:defaultValue="false"
			android:dependency="allowAutoUpdateSLSCode"
		/>
		<com.nao20010128nao.Wisecraft.misc.pref.StartPref
			android:title="@string/currentSlsVersion"
			android:key="currentSlsVersion"
			android:enabled="false"
		/>
	</PreferenceScreen>
</PreferenceScreen>
